Fix form editor overflow for long form layouts

--- a/app/assets/stylesheets/form_definitions/builder.scss
+++ b/app/assets/stylesheets/form_definitions/builder.scss
@@ -9,6 +9,7 @@
 .admin_form_definitions.edit_form_schema,
 .admin_form_definitions.update_form_schema,
 {
+  overflow: hidden;
   padding: 0 0 0 53px;
 
   #wrapper {
@@ -59,6 +60,8 @@
     margin-left: -13px;
   }
   .formarea {
+    height: 100%;
+    overflow-y: auto;
     padding-top: 16px;
   }
   .card.preview-panel {
